--- a/node-udemy/section34/Templating_Demo/views/home.ejs
+++ b/node-udemy/section34/Templating_Demo/views/home.ejs
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-    <h1>The Home Page <%= 'hello world'.toUpperCase() %></h1>
+    <h1>The Home Page <%= 'jenny is the best'.toUpperCase() %></h1>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Beatae nulla vero expedita eius a? Possimus nam,
         inventore perferendis laudantium culpa pariatur corrupti maxime dignissimos consectetur adipisci. Eligendi esse
         possimus consequatur.lorem Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempore temporibus fugiat,
